# microphone-muter

./: Cargo.toml  README.md  build.rs  justfile  tray-example.rc
src/: main.rs
