[package]
name = "microphone-muter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Media_Devices",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Media_Capture", 
    "Win32_System_Com", 
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_FunctionDiscovery"
]