[package]
name = "microphone-muter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hookmap = "0.5.1"
rodio = "0.17.3"
tray-item = "0.9.0"


[build-dependencies]
embed-resource = "2.4.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com", 
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_WindowsAndMessaging"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
